--- a/Frontend/app/src/app/demo/pages/home/home.component.css
+++ b/Frontend/app/src/app/demo/pages/home/home.component.css
@@ -41,3 +41,22 @@ table {
   color: #1f53ff;
 }
 
+.buttonAction {
+  width: 110px;
+  margin: 2px;
+}
+
+:host ::ng-deep .mat-sort-header-container {
+  display: flex;
+  justify-content: center;
+}
+
+td,
+th {
+  text-align: center !important;
+  vertical-align: middle !important;
+}
+
+.mat-sort-header-container {
+  justify-content: center !important;
+}
