--- a/Frontend/app/src/app/demo/pages/home/home.component.html
+++ b/Frontend/app/src/app/demo/pages/home/home.component.html
@@ -42,40 +42,37 @@
           {{ row.firstName + " " + row.lastName }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="edit">
+      <ng-container matColumnDef="acciones">
         <th
           mat-header-cell
           *matHeaderCellDef
           mat-sort-header
           class="text-secondary fw-normal"
         >
-          Editar
+          Acciones
         </th>
         <td mat-cell *matCellDef="let row">
           <button
             mat-raised-button
             color="primary"
+            class="buttonAction"
             (click)="editResume(row.id)"
           >
+            Editar
             <mat-icon>edit</mat-icon>
           </button>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="delete">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          class="text-secondary fw-normal"
-        >
-          Eliminar
-        </th>
-        <td mat-cell *matCellDef="let row">
-          <button mat-raised-button color="warn" (click)="deleteResume(row.id)">
+          <button
+            mat-raised-button
+            color="warn"
+            class="buttonAction"
+            (click)="deleteResume(row.id)"
+          >
+            Eliminar
             <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       <tr class="mat-row" *matNoDataRow>
