fix, eliminar resumes

--- a/Frontend/app/src/app/demo/pages/home/home.component.html
+++ b/Frontend/app/src/app/demo/pages/home/home.component.html
@@ -16,7 +16,7 @@
 
   <div>
     <p class="h6 py-2 text-muted">Listado de curriculums.</p>
-    <table mat-table class="shadow-sm" [dataSource]="dataSource" matSort>
+    <table mat-table class="shadow-sm" [dataSource]="this.dataSource" matSort>
       <ng-container matColumnDef="id">
         <th
           mat-header-cell
