--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -421,7 +421,7 @@
   </div>
   <div class="layout-preview">
     <app-preview></app-preview>
-    <button (click)="saveResume()" class="button-floating bg-primary">
+    <button (click)="operations()" class="button-floating bg-primary">
       <mat-icon class="text-light">save</mat-icon>
     </button>
   </div>
