--- a/Frontend/app/src/app/demo/pages/home/home.component.html
+++ b/Frontend/app/src/app/demo/pages/home/home.component.html
@@ -24,9 +24,9 @@
           mat-sort-header
           class="text-secondary fw-normal"
         >
-          Identificador del curriculum
+          N° de curriculum
         </th>
-        <td mat-cell *matCellDef="let row" class="w-25">{{ row.id }}</td>
+        <td mat-cell *matCellDef="let i=index" class="w-25"> {{i+1}} </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
