ordenar columna compleja

--- a/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.html
+++ b/Frontend/app/src/app/layout/components/sidebar/app.sidebar.component.html
@@ -2,6 +2,11 @@
   <div class="sidebar-logotype">
     <img src="../../../../assets/logo.png" alt="logotype" class="logotype" />
   </div>
+  <div class="sidebar-logotype">
+    <img src="../../assets/icons/user.svg" height="20px" />: {{
+      this.NombreUsuario
+    }}
+  </div>
   <div class="sidebar-main-container">
     <div class="sidebar-main">
       <div class="sidebar-item" *ngFor="let menuItem of menuItems">
